changed hparams to be inside n2n, more cleaning of code

--- a/Bidirectional.ipynb
+++ b/Bidirectional.ipynb
@@ -205,7 +205,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "dfa8a01d",
+   "id": "961ec717",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -252,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "a0aa89a7",
+   "id": "087c06e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +265,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "f585967c",
+   "id": "ab968256",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "53420604",
+   "id": "e3bc3fe8",
    "metadata": {
     "scrolled": true
    },
@@ -579,7 +579,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "67fa2f70",
+   "id": "d1cac9d0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 118,
    "id": "582fd981",
    "metadata": {},
    "outputs": [],
@@ -619,23 +619,17 @@
     "layer_size = 500\n",
     "bid = True\n",
     "\n",
-    "initial_params = {'hidden_layer_size': layer_size, #1000 in 5C\n",
-    "                  'input_activation': 'tanh', #\n",
-    "                  'k_in' : 1,\n",
-    "                  'bias_scaling': 0.0, # usually 0 \n",
-    "                  'spectral_radius' : 0.0, # \n",
+    "initial_params = {'spectral_radius' : 0.0, # \n",
     "                  'reservoir_activation': 'tanh', # 2\n",
     "                  'leakage': 0.05, #equation 6, 17 frames should be 1 step \n",
-    "                  'bidirectional': True, #bidirectional \n",
+    "                  'bidirectional': bid, #bidirectional \n",
     "                  'k_rec': layer_size / 10, # optimal is 200 for 1000 layer size \n",
-    "                  'alpha': 0.1, # figure 6, tuned with k_in\n",
-    "                  'random_state': 1, # \n",
-    "                  'requires_sequence': True}"
+    "                  'random_state': 1, }"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 119,
    "id": "60a03477",
    "metadata": {},
    "outputs": [
@@ -645,16 +639,21 @@
        "ESNClassifier(input_to_node=Pipeline(steps=[('i2n', InputToNode())]),\n",
        "              node_to_node=Pipeline(steps=[('layer1',\n",
        "                                            NodeToNode(bidirectional=True,\n",
-       "                                                       leakage=0.05)),\n",
+       "                                                       k_rec=50.0, leakage=0.05,\n",
+       "                                                       random_state=1,\n",
+       "                                                       sparsity=0.1,\n",
+       "                                                       spectral_radius=0.0)),\n",
        "                                           ('layer2',\n",
        "                                            NodeToNode(bidirectional=True,\n",
        "                                                       hidden_layer_size=1000,\n",
-       "                                                       leakage=0.05))]),\n",
-       "              regressor=IncrementalRegression(alpha=0.1),\n",
-       "              requires_sequence=True)"
+       "                                                       k_rec=50.0, leakage=0.05,\n",
+       "                                                       random_state=1,\n",
+       "                                                       sparsity=0.05,\n",
+       "                                                       spectral_radius=0.0))]),\n",
+       "              regressor=IncrementalRegression(), requires_sequence=True)"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -663,26 +662,26 @@
     "i2n = InputToNode(hidden_layer_size=layer_size, input_activation=\"tanh\")\n",
     "\n",
     "l1 = Pipeline([('i2n', i2n)])\n",
-    "n2n = Pipeline([('layer1', NodeToNode(hidden_layer_size=layer2_size, leakage=.05, bidirectional = bid)),\n",
-    "               ('layer2', NodeToNode(hidden_layer_size=layer2_size * 2 ** bid, leakage=.05, bidirectional = bid))])\n",
-    "n2o = ESNClassifier(input_to_node=l1, node_to_node=n2n, **initial_params)\n",
+    "n2n = Pipeline([('layer1', NodeToNode(hidden_layer_size=layer_size, **initial_params)),\n",
+    "               ('layer2', NodeToNode(hidden_layer_size=layer_size * 2 ** bid, **initial_params))])\n",
+    "n2o = ESNClassifier(input_to_node=l1, node_to_node=n2n, input_activation = 'tanh', requires_sequence = True)\n",
     "\n",
     "n2o.fit(train_dataset, train_labels_repeat)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "id": "8aa96bce",
+   "execution_count": 120,
+   "id": "957f04dc",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.8901078389849258\n",
-      "0.4833370312846683\n",
-      "0.48440204126913694\n"
+      "0.5174564988712436\n",
+      "0.3692034612824495\n",
+      "0.3830929664965609\n"
      ]
     }
    ],
@@ -695,7 +694,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "d370957f",
+   "id": "6b32fc07",
    "metadata": {
     "scrolled": false
    },
@@ -734,7 +733,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "bd8e8ae2",
+   "id": "77d40ade",
    "metadata": {},
    "outputs": [
     {
@@ -771,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "35f51ab1",
+   "id": "018c084c",
    "metadata": {},
    "outputs": [
     {
@@ -808,7 +807,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d860d55f",
+   "id": "7eb0c049",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -816,7 +815,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3926773",
+   "id": "72639f06",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -824,7 +823,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "096d2c44",
+   "id": "82fc20e2",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -832,7 +831,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c55f9408",
+   "id": "bb40886c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -890,20 +889,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
-   "id": "bba9035b",
+   "execution_count": 134,
+   "id": "3b38728d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def make_classifier(esn_params, bid = True, n2n_leakage = 0.05): \n",
-    "    i2n = InputToNode(hidden_layer_size=esn_params['hidden_layer_size'], input_activation=\"tanh\")\n",
+    "def make_classifier(esn_params, bid = True, n2n_leakage = 0.05, hidden_layer_size = 500): \n",
+    "    i2n = InputToNode(hidden_layer_size=hidden_layer_size, input_activation=\"tanh\")\n",
     "    \n",
     "    l1 = Pipeline([('i2n', i2n)])\n",
     "    \n",
-    "    n2n = Pipeline([('layer1', NodeToNode(hidden_layer_size=esn_params['hidden_layer_size'], leakage= n2n_leakage, bidirectional = bid)),\n",
-    "                   ('layer2', NodeToNode(hidden_layer_size=esn_params['hidden_layer_size'] * 2 ** bid, leakage= n2n_leakage, bidirectional = bid))])\n",
+    "    n2n = Pipeline([('layer1', NodeToNode(hidden_layer_size=hidden_layer_size, bidirectional = bid, **esn_params)),\n",
+    "                   ('layer2', NodeToNode(hidden_layer_size=hidden_layer_size * 2 ** bid, bidirectional = bid, **esn_params))])\n",
     "    \n",
-    "    model = ESNClassifier(input_to_node=l1, node_to_node=n2n, **esn_params)\n",
+    "    model = ESNClassifier(input_to_node=l1, node_to_node=n2n, input_activation = 'tanh', requires_sequence = True)\n",
     "    \n",
     "    return model"
    ]
@@ -913,188 +912,67 @@
    "execution_count": null,
    "id": "e3d5d613",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n",
-      "0.24175726647437323\n"
+      "search 0\n"
      ]
     }
    ],
    "source": [
-    "initial_params = {'input_activation': 'tanh', #\n",
-    "                  'bias_scaling': 0.0, # usually 0 \n",
-    "                  'spectral_radius' : 0.0, # \n",
+    "initial_params = {# 'spectral_radius' : 0.0, # \n",
+    "                  # 'hidden_layer_size' : 400,\n",
     "                  'reservoir_activation': 'tanh', # 2\n",
     "                  'leakage': 0.05, #equation 6, 17 frames should be 1 step \n",
-    "                  'alpha': 0.1, # figure 6, tuned with k_in\n",
-    "                  'random_state': 1, # \n",
-    "                  'requires_sequence': True}\n",
+    "                  # 'k_rec': layer_size / 10, # optimal is 200 for 1000 layer size \n",
+    "                  'random_state': 1, }\n",
     "\n",
     "# test k_rec and k_in\n",
     "\n",
-    "param_grid = {'hidden_layer_size': [250, 500], \n",
-    "              'k_rec' : [5, 20, 50, 100], \n",
-    "              'k_in' : [1, 5, 10, 50]}\n",
+    "param_grid = {'spectral_radius': [0, .2, .4, .6, .8, 1], \n",
+    "              'k_rec' : [None, 20, 50, 100, 200]}\n",
     "\n",
-    "x = [] \n",
+    "rho_krec_hparam = [] \n",
     "\n",
     "for i, params in enumerate(ParameterGrid(param_grid)):\n",
+    "    print(f'search {i}')\n",
     "    for k, v in params.items(): \n",
     "        initial_params[k] = v\n",
     "        \n",
-    "    model = make_classifier(initial_params)\n",
-    "    \n",
-    "    model.fit(train_dataset, train_labels_repeat)\n",
+    "    model = make_classifier(initial_params).fit(train_dataset, train_labels_repeat)\n",
     "    \n",
     "    valid_predictions, valid_acc = get_accuracy(model, valid_dataset, valid_labels)\n",
     "    \n",
-    "    print(valid_acc)\n",
-    "    \n",
-    "    x.append((valid_acc, param_grid))\n"
+    "    rho_krec_hparam.append((valid_acc, params))\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8733c223",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7a817ec0",
+   "id": "27451db8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# model from door example\n",
-    "\n",
-    "\n",
-    "\n",
-    "initially_fixed_params = {'hidden_layer_size': 100,\n",
-    "                          'k_in': 10,\n",
-    "                          'input_scaling': 0.4,\n",
-    "                          'input_activation': 'identity',\n",
-    "                          'bias_scaling': 0.0,\n",
-    "                          'spectral_radius': 0.0,\n",
-    "                          'leakage': 0.1,\n",
-    "                          'k_rec': 10,\n",
-    "                          'reservoir_activation': 'tanh',\n",
-    "                          'bidirectional': False,\n",
-    "                          'wash_out': 0,\n",
-    "                          'continuation': False,\n",
-    "                          'alpha': 1e-3,\n",
-    "                          'random_state': 42}\n",
-    "\n",
-    "step1_esn_params = {'input_scaling': uniform(loc=1e-2, scale=1),\n",
-    "                    'spectral_radius': uniform(loc=0, scale=2)}\n",
-    "\n",
-    "step2_esn_params = {'leakage': loguniform(1e-5, 1e0)}\n",
-    "step3_esn_params = {'bias_scaling': np.linspace(0.0, 1.0, 11)}\n",
-    "step4_esn_params = {'alpha': loguniform(1e-5, 1e1)}\n",
-    "\n",
-    "kwargs_step1 = {'n_iter': 200, 'random_state': 42, 'verbose': 1, 'n_jobs': -1, 'scoring': make_scorer(accuracy_score)}\n",
-    "kwargs_step2 = {'n_iter': 50, 'random_state': 42, 'verbose': 1, 'n_jobs': -1, 'scoring': make_scorer(accuracy_score)}\n",
-    "kwargs_step3 = {'verbose': 1, 'n_jobs': -1, 'scoring': make_scorer(accuracy_score)}\n",
-    "kwargs_step4 = {'n_iter': 50, 'random_state': 42, 'verbose': 1, 'n_jobs': -1, 'scoring': make_scorer(accuracy_score)}\n",
-    "\n",
-    "# The searches are defined similarly to the steps of a sklearn.pipeline.Pipeline:\n",
-    "searches = [('step1', RandomizedSearchCV, step1_esn_params, kwargs_step1),\n",
-    "            ('step2', RandomizedSearchCV, step2_esn_params, kwargs_step2),\n",
-    "            ('step3', GridSearchCV, step3_esn_params, kwargs_step3),\n",
-    "            ('step4', RandomizedSearchCV, step4_esn_params, kwargs_step4)]\n",
-    "\n",
-    "base_km_esn = ESNClassifier(input_to_node=PredefinedWeightsInputToNode(predefined_input_weights=w_in.T),\n",
-    "                                    **initially_fixed_params)\n",
-    "\n",
-    "try:\n",
-    "    sequential_search = load(\"RICSyN2015/sequential_search_RICSyN2015_km_large_1.joblib\")\n",
-    "except FileNotFoundError:\n",
-    "    sequential_search = SequentialSearchCV(base_km_esn, searches=searches).fit(dataset, labels_repeat)\n",
-    "    dump(sequential_search, \"RICSyN2015/sequential_search_RICSyN2015_km_large_1.joblib\")"
+    "for y in rho_krec_hparam: \n",
+    "    print(y)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3d1a5ae",
+   "id": "b9cc9b67",
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_esn.fit(dataset, labels_repeat)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "73d0c5fe",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions = base_esn.predict(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9aa18d36",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "correct = []\n",
-    "for i, prediction in enumerate(predictions):  \n",
-    "    \n",
-    "    correct.append((prediction == labels[i]).mean())\n",
     "\n",
-    "correct = np.array(correct)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b303899f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "correct.mean()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a39b1e4d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "correct"
+    "\n",
+    "a = np.random.random((16, 16))\n",
+    "plt.imshow(a, cmap='hot', interpolation='nearest')\n",
+    "plt.show()"
    ]
   },
   {
